DDD News						-*- text -*-
********

DDD-3.3.10
==========

* New features and minor improvements
- More fixes for perl 5.8.x -- it's now a lot more usable.
- Fixes for Sun's SunONE Studio dbx (1). Build with -DHAVE_SUNDBX is
  necessary. DBX detection improvement is welcome.

* Build fixes
- automake 1.9 is now the minimum requirement. This affects only builds
  from CVS repository.
- A warning is emitted if a version of g++ older than 3.1 is used.
- libiberty is neither linked nor bundled anymore.
- GNU libtermcap is not bundled anymore. A termcap like library (such as
  ncurses) is now required to build ddd.
  configure has '--with-termlib=LIB' and '--with-termlib-libraries=DIR'
  to offer a finer control on the choice of library.
(1) Thanks for Ingo Dahm for this patch.

DDD-3.3.9
=========

* New features and minor improvements
- Support for PHP debugger has been added (1).  This is essentially not
  tested.
- Source files in subdirectories should be located automatically
  when using dbx (tested on Solaris' dbx) (2).
- The perl version supported by DDD is now 5.8.x.  The perl debugger
  changed between perl 5.6.x and perl 5.8.0, which made this update necessary.
  This change is not backwards-compatible.  If it is not possible to upgrade
  your perl version to 5.8.x or newer, then you can simply install the file
  "perl5db.pl" from a recent perl distribution into your old perl tree.
- Through the maintenance menu ("ddd --maintenance"), it now possible to get
  a leak check of ddd if ddd is run under valgrind. This is only useful for
  ddd developers (or anybody that wants to help making ddd better).
- Several minor bugs fixed, some memory leaks plugged, more code clean-up
  done.
- A bug affecting platforms where the size of function pointers is 16 has
  been fixed.
- The settings window now starts at a larger, more reasonable size, and
  allows the user to resize it.

* Build fixes
- The configure machinery has been updated to conform more closely to the