@@ -7,7 +7,8 @@ DDD-3.3.10
 * New features and minor improvements
 - More fixes for perl 5.8.x -- it's now a lot more usable.
 - Fixes for Sun's SunONE Studio dbx (1). Build with -DHAVE_SUNDBX is
-  necessary. DBX detection improvement is welcome.
+  necessary. Improvements for automatic detection of Sun DBX are welcome.
+- Fixes for MacOS X (mainly workarounds for bugs in gdb) (2).
 
 * Build fixes
 - automake 1.9 is now the minimum requirement. This affects only builds
@@ -18,7 +19,9 @@ DDD-3.3.10
   ncurses) is now required to build ddd.
   configure has '--with-termlib=LIB' and '--with-termlib-libraries=DIR'
   to offer a finer control on the choice of library.
-(1) Thanks for Ingo Dahm for this patch.
+
+(1) Thanks to Ingo Dahm for this patch.
+(2) Thanks to Terry Teague.
 
 DDD-3.3.9
 =========
